fixed bug with canvas on IphoneSE

--- a/mediaquerry.css
+++ b/mediaquerry.css
@@ -49,6 +49,12 @@
 @media only screen and (max-height: 480px) {
     canvas {
         height: 100vh;
+        position: fixed;
+    }
+
+    #gameContainer {
+        width: 100%;
+        height: 100vh;
     }
 }
 
